<resources>
    <string name="WidgetProvider_timestamp_days_ago">%s days ago</string>
    <string name="WidgetProvider_timestamp_hour_ago">%s hour ago</string>
    <string name="WidgetProvider_timestamp_hours_ago">%s hours ago</string>
    <string name="WidgetProvider_timestamp_just_now">Just now</string>
    <string name="WidgetProvider_timestamp_minutes_ago">%s minutes ago</string>
    <string name="WidgetProvider_timestamp_month_ago">1 month ago</string>
    <string name="WidgetProvider_timestamp_months_ago">%s months ago</string>
    <string name="WidgetProvider_timestamp_today">Today</string>
    <string name="WidgetProvider_timestamp_week_ago2">1 week ago</string>
    <string name="WidgetProvider_timestamp_weeks_ago">%s weeks ago</string>
    <string name="WidgetProvider_timestamp_year_ago">1 year ago</string>
    <string name="WidgetProvider_timestamp_years_ago">%s years ago</string>
    <string name="WidgetProvider_timestamp_yesterday">Yesterday</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_mail">Contact:</string>
    <string name="about_site">Website:</string>
    <string name="accept_terms_loggedin_button_accept">ACCEPT</string>
    <string name="accept_terms_loggedin_message">By pressing accept you agree to Aptoide\'s %1$s and %2$s</string>
    <string name="accept_terms_loggedin_readPP">READ PRIVACY POLICY</string>
    <string name="accept_terms_loggedin_readTC">READ TERMS &amp; CONDITIONS</string>
    <string name="accept_terms_message_loggedin">Please accept our %1$s and %2$s to continue using Aptoide. These documents include all details about our relationship and how we store your data.</string>
    <string name="accept_terms_signup">By joining Aptoide you agree to Aptoide\'s Terms and Conditions and Content Policy for Developers.</string>
    <string name="accept_terms_title_loggedin">Important Information</string>
    <string name="access_to_get_accounts_rationale">You need to allow access to Get Accounts</string>
    <string name="action">Action</string>
    <string name="add_store_dialog_discover_top_stores">Discover Top Stores</string>
    <string name="add_store_dialog_no_query">Type the name of the store</string>
    <string name="add_store_dialog_title">Find exclusive and tailored content in different stores</string>
    <string name="additional_information">Additional information</string>
    <string name="adult_pin_wrong">Wrong pin. Try again</string>
    <string name="adventure">Adventure</string>
    <string name="all">All</string>
    <string name="all_button_feedback_send">Send feedback</string>
    <string name="all_button_got_it">GOT IT</string>
    <string name="all_button_know_more">KNOW MORE</string>
    <string name="all_button_ok">OK</string>
    <string name="all_message_general_error">Something went wrong. Try again.</string>
    <string name="all_stores">All stores</string>
    <string name="all_title_ad">Ad</string>
    <string name="all_url_privacy_policy">https://www.aptoide.com/legal/privacy?header=0&amp;menu=0</string>
    <string name="all_url_terms_conditions">https://www.aptoide.com/legal/terms?header=0&amp;menu=0</string>
    <string name="apk_not_found">Apk not found</string>
    <string name="app_name">Aptoide</string>
    <string name="app_size">Size: %1$s</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appc_card_short">APPCOINS</string>
    <string name="appc_home_bundle_iab">Use Your AppCoins</string>
    <string name="appc_home_bundle_poa">Earn AppCoins Credits</string>
    <string name="appc_message_appcoins_benefit_1">Huge discounts</string>
    <string name="appc_message_appcoins_benefit_2">Earn free AppCoins Credits</string>
    <string name="appview_button_donations">DONATE</string>
    <string name="appview_message_donations_empty">No donations yet. Be the first to claim the top spot on the leaderboard!</string>
    <string name="appview_message_donations_leaderboard">Donations are a great way to show your support for a developer and make a difference. Donate AppCoins now to get on the leaderboard.</string>
    <string name="appview_title_donations_leaderboard">Top Donations</string>
    <string name="bottomnavigation_button_apps">Apps</string>
    <string name="bottomnavigation_button_editorial">Editorial</string>
    <string name="bottomnavigation_button_home">Home</string>
    <string name="bottomnavigation_button_search">Search</string>
    <string name="bottomnavigation_button_stores">Stores</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_button">Cancel</string>
    <string name="cvc_cvv">CVC/CVV</string>
    <string name="cvc_extended_hint_with_last_digits">Please enter the CVC code for %1$s</string>
    <string name="drawer_title_feedback_send_button">Send feedback</string>
    <string name="drawer_title_my_account">My Account</string>
    <string name="drawer_title_settings">Settings</string>
    <string name="excluded_updates">Excluded updates</string>
    <string name="feedback_include_logs">Include screenshot and logs</string>
    <string name="feedback_subject">Subject</string>
    <string name="feedback_to_write2">Write here to send us your feedback…\10\10 Please give us all the details you can (in English): \10• Steps you have done \10• Errors you are seeing</string>
    <string name="hint_cvc_cvv">123</string>
    <string name="holidayspromotion_button_popup">Check it out!</string>
    <string name="holidayspromotion_button_wallet_get">Get the Wallet Address</string>
    <string name="holidayspromotion_message_popup">Earn %s APPC Credits by installing apps and spend them in your favorite games!</string>
    <string name="holidayspromotion_message_wallet">Tell us your AppCoins wallet address. Once you create a wallet, you\'ll find the address when pressing on \'Receive\'.</string>
    <string name="holidayspromotion_short_wallet_field">Wallet address</string>
    <string name="holidayspromotion_short_wallet_invalid">Invalid wallet address</string>
    <string name="holidayspromotion_title_wallet">AppCoins Wallet Address</string>
    <string name="iab_button_next">Next</string>
    <string name="myaccount_log_out_button">Log out</string>
    <string name="order_popup_title3">Adult Content</string>
    <string name="pay_with_amount">Pay %1$s</string>
    <string name="remove_mature_pin_summary">Remove the pin code required to unlock adult content</string>
    <string name="remove_mature_pin_title">Remove adult content pin</string>
    <string name="report_ad_reason_imagery">Contains provocative or suggestive imagery</string>
    <string name="report_ad_reason_inappropriate">Contains inappropriate content</string>
    <string name="report_ad_reason_misleading">Is misleading (e.g. simulates a dialog or app component)</string>
    <string name="report_ad_reason_playAudio">Automatically plays audio or video</string>
    <string name="report_ad_reason_shaky">Is shaky, flashing or flickering</string>
    <string name="report_ad_reason_unwantedBehavior">Automatically triggers unwanted behavior (redirects/downloads)</string>
    <string name="set_mature_pin_summary">Set a pin code to unlock adult content</string>
    <string name="set_mature_pin_title">Set adult content pin</string>
    <string name="setting_appfiltersum">You\'ll only see apps compatible with this device</string>
    <string name="setting_appfiltertitle">Only show compatible apps</string>
    <string name="setting_auto_update_sum">Enable automatic update of apps</string>
    <string name="setting_auto_update_title">Enable auto update</string>
    <string name="setting_category_autoupdate_title">Update Aptoide</string>
    <string name="setting_clear_memory">Storage</string>
    <string name="setting_dont_show_mature_content">Show adult content</string>
    <string name="setting_general">General</string>
    <string name="setting_hwspecssum">Hardware info about your phone</string>
    <string name="setting_hwspecstitle">Hardware Specs</string>
    <string name="setting_mobile">Download only over wifi</string>
    <string name="setting_notifications">Notifications</string>
    <string name="setting_notifications_sub_section_1">App updates</string>
    <string name="setting_notifications_sub_section_2">Campaigns</string>
    <string name="setting_notifications_sub_sub_section_1">Show notifications for app updates</string>
    <string name="setting_notifications_sub_sub_section_2">Show notifications for app campaigns</string>
    <string name="settings_about_us">About us</string>
    <string name="settings_allow_root">Allow root installation</string>
    <string name="settings_clear_cache_summary">Delete temporary files</string>
    <string name="settings_clearcache_title">Clear cache</string>
    <string name="settings_delete_account">Delete account</string>
    <string name="settings_include_system_apps_summary">You\'ll see updates for system apps</string>
    <string name="settings_include_system_apps_title">System apps</string>
    <string name="settings_maxFileCache_sum">Set a maximum size for your cache</string>
    <string name="settings_maxFileCache_title">Set max. cache size (MB)</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_root">Root</string>
    <string name="settings_send_feedback">Send feedback</string>
    <string name="settings_support">Support</string>
    <string name="settings_terms_conditions">Terms and Conditions</string>
    <string name="settings_title_settings">Settings</string>
    <string name="settings_updates_filter_setting_title">Beta versions</string>
    <string name="settings_updates_filter_summary">You\'ll see updates for beta versions.</string>
    <string name="skip">Skip</string>
    <string name="title_verify_card">Verify your card</string>
    <string name="updates">Updates</string>
</resources>