<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="@drawable/ic_home_bottom_nav" android:enabled="true" android:id="@+id/action_home" android:title="@string/bottomnavigation_button_home" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_editorial" android:enabled="true" android:id="@+id/action_curation" android:title="@string/bottomnavigation_button_editorial" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_search_bottom" android:enabled="true" android:id="@+id/action_search" android:title="@string/bottomnavigation_button_search" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_store_bottom_nav" android:enabled="true" android:id="@+id/action_stores" android:title="@string/bottomnavigation_button_stores" app:showAsAction="ifRoom"/>
    <item android:icon="@drawable/ic_apps_bottom" android:enabled="true" android:id="@+id/action_apps" android:title="@string/bottomnavigation_button_apps" app:showAsAction="ifRoom"/>
</menu>
