<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:layout_width="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="23dp" android:layout_marginRight="16dp" android:layout_marginBottom="15dp" android:text="@string/holidayspromotion_title_wallet" style="@style/Aptoide.TextView.Regular.L.BlackAlpha"/>
    <TextView android:layout_width="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="15dp" android:text="@string/holidayspromotion_message_wallet" style="@style/Aptoide.TextView.Regular.M.BlackAlpha"/>
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="8dp">
        <EditText android:textColor="@color/black_87_alpha" android:ellipsize="middle" android:id="@+id/wallet_edit" android:background="@drawable/edit_text_background" android:paddingLeft="28dp" android:paddingRight="16dp" android:layout_width="match_parent" android:layout_height="56dp" android:hint="@string/holidayspromotion_short_wallet_field" android:scrollHorizontally="true" android:singleLine="true" android:inputType="text"/>
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/wallet_message_icon" android:visibility="gone" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginLeft="8dp" android:src="@drawable/ic_check_green" android:layout_centerVertical="true"/>
    </RelativeLayout>
    <LinearLayout android:layout_gravity="center" android:orientation="horizontal" android:id="@+id/wallet_error_view" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="16dp">
        <ImageView android:layout_gravity="center_vertical" android:id="@+id/wallet_error_icon" android:layout_width="16dp" android:layout_height="16dp" android:layout_marginRight="4dp" android:src="@drawable/ic_info_red"/>
        <TextView android:layout_gravity="center_vertical" android:id="@+id/wallet_error_message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/holidayspromotion_short_wallet_invalid" style="@style/Aptoide.TextView.Medium.XS.BlackAlpha"/>
    </LinearLayout>
    <Button android:id="@+id/get_wallet_button" android:layout_width="match_parent" android:layout_marginLeft="16dp" android:layout_marginRight="16dp" android:layout_marginBottom="33dp" android:text="@string/holidayspromotion_button_wallet_get" style="@style/Aptoide.Button"/>
    <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="8dp" android:layout_marginBottom="8dp">
        <Button android:id="@+id/wallet_cancel_button" android:layout_width="wrap_content" android:layout_marginRight="16dp" android:text="@string/cancel" style="@style/Aptoide.Button.Flat"/>
        <Button android:id="@+id/wallet_continue_button" android:layout_width="wrap_content" android:text="@string/iab_button_next" style="@style/Aptoide.Button.Flat"/>
    </LinearLayout>
</LinearLayout>
