<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <android.support.design.widget.AppBarLayout android:id="@+id/appbar" android:background="?attr/toolbarBackground" android:layout_width="match_parent" android:layout_height="wrap_content" app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
        <android.support.p001v7.widget.Toolbar android:id="@+id/toolbar" android:layout_width="match_parent" android:layout_height="wrap_content" app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout android:orientation="vertical" android:paddingLeft="@dimen/activity_horizontal_margin" android:paddingTop="@dimen/activity_vertical_margin" android:paddingRight="@dimen/activity_horizontal_margin" android:paddingBottom="@dimen/activity_vertical_margin" android:layout_width="match_parent" android:layout_height="match_parent">
        <EditText android:layout_gravity="center_horizontal" android:id="@+id/FeedBackSubject" android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/feedback_subject" android:singleLine="true" android:inputType="textEmailAddress"/>
        <EditText android:id="@+id/FeedBacktext" android:layout_width="match_parent" android:layout_height="0dp" android:hint="@string/feedback_to_write2" android:layout_weight="1"/>
        <CheckBox android:textColor="?android:attr/textColorSecondary" android:id="@+id/FeedBackCheckBox" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/feedback_include_logs"/>
        <Button android:id="@+id/FeedBackSendButton" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:layout_marginRight="10dp" android:text="@string/all_button_feedback_send" style="@style/Aptoide.Button"/>
    </LinearLayout>
</LinearLayout>
