<?xml version="1.0" encoding="utf-8"?>
<android.support.p001v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content">
    <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="16dp" android:text="@string/accept_terms_title_loggedin" style="@style/Aptoide.TextView.Regular.L.BlackAlpha"/>
        <TextView android:id="@+id/tos_info" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="12dp" android:layout_marginRight="16dp" android:text="@string/accept_terms_message_loggedin" style="@style/Aptoide.TextView.Regular.M.BlackAlpha"/>
        <Button android:id="@+id/accept_continue" android:paddingLeft="32dp" android:paddingTop="16dp" android:paddingRight="32dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="8dp" android:layout_marginTop="16dp" android:layout_marginBottom="8dp" style="@style/Aptoide.Button"/>
        <Button android:textSize="13sp" android:id="@+id/log_out" android:paddingTop="16dp" android:paddingBottom="16dp" android:layout_width="match_parent" android:layout_marginLeft="8dp" android:layout_marginBottom="10dp" android:text="@string/myaccount_log_out_button" style="@style/Aptoide.Button.Flat.GreyMedium"/>
    </LinearLayout>
</android.support.p001v7.widget.CardView>
