<?xml version="1.0" encoding="utf-8"?>
<android.support.p001v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="wrap_content" app:cardCornerRadius="7dp" app:cardUseCompatPadding="true">
    <ScrollView android:scrollbars="none" android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content">
            <ImageView android:id="@+id/promotion_graphic" android:layout_width="match_parent" android:layout_height="250dp" android:scaleType="centerCrop"/>
            <TextView android:id="@+id/promotion_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" style="@style/Aptoide.TextView.Regular.L.BlackAlpha"/>
            <TextView android:id="@+id/description" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="16dp" android:layout_marginTop="8dp" android:layout_marginRight="16dp" android:text="@string/holidayspromotion_message_popup" style="@style/Aptoide.TextView.Regular.M.BlackAlpha"/>
            <LinearLayout android:layout_gravity="end" android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="32dp" android:layout_marginRight="8dp" android:layout_marginBottom="8dp">
                <Button android:id="@+id/cancel_button" android:layout_width="78dp" android:layout_marginRight="16dp" android:text="@string/skip" style="@style/Aptoide.Button.Flat"/>
                <Button android:id="@+id/navigate_button" android:layout_width="wrap_content" android:text="@string/holidayspromotion_button_popup" style="@style/Aptoide.Button.Flat"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</android.support.p001v7.widget.CardView>
